--- a/package.json
+++ b/package.json
@@ -3,18 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.3",
+    "firebase": "^7.15.5",
     "jquery": "^3.5.1",
     "papaparse": "^5.2.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-csv-reader": "^3.0.6",
     "react-dom": "^16.13.1",
     "react-papaparse": "^3.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-slick": "^0.26.1",
+    "react-social-login-buttons": "^3.1.0",
+    "recompose": "^0.30.0",
     "slick-carousel": "^1.8.1",
     "tsutils": "^3.17.1"
   },
